# serverme

./: .gitignore  .goreleaser.yml  INFRASTRUCTURE.md  LICENSE  Makefile  PROGRESS.md  README.md  go.work
.github/workflows/: ci.yml  release.yml
cli/: Dockerfile  go.mod  go.sum
cli/cmd/serverme/: main.go
cli/internal/client/: client.go
cli/internal/commands/: authtoken.go  display.go  http.go  login.go  root.go  start.go  status.go  tcp.go  tls.go  version.go
cli/internal/config/: config.go
cli/internal/inspector/: adapter.go  inspector.go
deploy/: docker-compose.yml  get.sh  install.sh
homebrew-tap/: README.md
homebrew-tap/Formula/: serverme.rb
npm-package/: README.md  package.json
proto/: codec.go  go.mod  messages.go  proto_test.go
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/src/: client.ts  errors.ts  index.ts  types.ts
sdk-python/: README.md  pyproject.toml
sdk-python/serverme/: __init__.py  client.py  errors.py  types.py
server/: Dockerfile  go.mod  go.sum
server/cmd/servermesrv/: main.go
server/internal/api/: admin_handlers.go  billing_handlers.go  deploy_handlers.go  github_handlers.go  google_oauth.go  handlers.go  inspect_handlers.go  router.go  subdomain_handlers.go  team_context.go  team_handlers.go  telegram_handlers.go
server/internal/auth/: jwt.go  middleware.go  oauth.go
server/internal/billing/: inventpay.go
server/internal/control/: conn.go  manager.go
server/internal/db/: admin.go  billing.go  db.go  github.go  models.go  projects.go  (+4 more)
web/: package-lock.json  package.json
(+60 files in other folders)
