[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverme"
version = "1.0.0"
description = "Python SDK for ServerMe tunneling platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ServerMe"}]
keywords = ["serverme", "tunnel", "ngrok", "localhost", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://serverme.dev"
Repository = "https://github.com/jams24/serverme"
Documentation = "https://docs.serverme.dev/sdks/python"

[tool.setuptools.packages.find]
include = ["serverme*"]
